--- a/src/styles/modules/variables.css
+++ b/src/styles/modules/variables.css
@@ -9,7 +9,7 @@
   --color-link: #333;
   --color-link-hover: #666;
   --color-border: #eee;
-  --color-muted: #595959;
+  --color-muted: #4d4d4d;
   --color-sidebar-bg: #f7f7f7;
   --color-nav-bg: #f5f5f5;
   --color-nav-text: #333;
